---------------------------------------------------------------------------------------------------
Version: 1.3.22
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 1.3.21
Date: 2023-12-26
  Features:
    - Milestones presets can now mark milestones as "hidden". These milestones are still tracked but will only appear in the GUI after they are reached.

  Changes:
    - Small additions to SE default presets: Added a couple hidden milestones for a couple spoilers. Removed "(No spoilers)" from the name of the presets. The name change will cause a "detected a new preset" message on save file load, but you can ignore it.
    - Small additions to PyMods default presets: Added burner assembler 1 and splitter.

  Scripting:
    - A custom event is now fired when a milestone is reached. Use the new remote interface to get the custom event ID: remote.call("milestones", "get_on_milestone_reached_event"). Thanks to Ziro2k for the idea and code inspiration.
    - Milestones can now write reached milestones to a text file in the script output folder. This can be useful for external programs. This is off by default, check the new "Write milestones to file" player setting for details.

  Locale:
    - Added Czech translation thanks to Bakendrid.
    - Translation updates for French and Chinese.

---------------------------------------------------------------------------------------------------
Version: 1.3.20
Date: 2023-08-15
  Changes:
    - Added plague rocket to default SE presets.
    - Removed some overly verbose log lines.

  Bugfixes:
    - Fixed turning off an infinite milestone in settings not actually applying the change.
    - Fixed milestones added as part of an infinite milestone not editing the right milestone when trying to edit the estimation time.

  Compatibility: