@@ -43,6 +43,7 @@ type_fluid=Fluid
 type_technology=Research
 type_kill=Kill
 type_group=Group
+type_consumption=Consumption
 edit_time_tooltip=Edit estimated time
 edit_time_confirm=Confirm and lock-in time
 edit_time_minutes=minutes ago
@@ -87,6 +88,8 @@ message_settings_changed_multiplayer=[img=milestones_main_icon_white] [font=defa
 message_settings_backfilled=Completion times for new milestones were backfilled using production statistics.
 message_milestone_reached_item_first=[img=milestones_main_icon_white] [font=default-large-bold]Created the first [color=green][img=__1__]__2__[/color] at [color=green]__3__[img=quantity-time][/color]![/font]
 message_milestone_reached_item_more=[img=milestones_main_icon_white] [font=default-large-bold]Created [color=green]__1__ [img=__2__]__3__[/color] at [color=green]__4__[img=quantity-time][/color]![/font]
+message_milestone_reached_consumption_first=[img=milestones_main_icon_white] [font=default-large-bold]Consumed the first [color=green][img=__1__]__2__[/color] at [color=green]__3__[img=quantity-time][/color]![/font]
+message_milestone_reached_consumption_more=[img=milestones_main_icon_white] [font=default-large-bold]Consumed [color=green]__1__ [img=__2__]__3__[/color] at [color=green]__4__[img=quantity-time][/color]![/font]
 message_milestone_reached_kill_first=[img=milestones_main_icon_white] [font=default-large-bold]Killed the first [color=green][img=__1__]__2__[/color] at [color=green]__3__[img=quantity-time][/color]![/font]
 message_milestone_reached_kill_more=[img=milestones_main_icon_white] [font=default-large-bold]Killed [color=green]__1__ [img=__2__]__3__[/color] at [color=green]__4__[img=quantity-time][/color]![/font]
 message_milestone_reached_technology=[img=milestones_main_icon_white] [font=default-large-bold]Researched [color=green][img=__1__]__2____3__[/color] at [color=green]__4__[img=quantity-time][/color]![/font]
