@@ -180,13 +180,18 @@ local function find_precision_bracket(milestone, stats)
     return previous_bracket
 end
 
-local function find_sample_in_precision_bracket(milestone, bracket, stats)
-    local total_count = stats.get_input_count(milestone.name)
-    local bracket_count = stats.get_flow_count{name=milestone.name, input=true, precision_index=bracket, count=true}
+local function find_sample_in_precision_bracket(milestone, bracket, stats, is_consumption)
+    local total_count
+    if is_consumption then
+        total_count = stats.get_output_count(milestone.name)
+    else
+        total_count = stats.get_input_count(milestone.name)
+    end
+    local bracket_count = stats.get_flow_count{name=milestone.name, input=(not is_consumption), precision_index=bracket, count=true}
     local count_before_bracket = total_count - bracket_count
     local count_this_bracket = 0
     for i = 300,1,-1 do -- Start from oldest
-        sample_count = stats.get_flow_count{name=milestone.name, input=true, precision_index=bracket, count=true, sample_index=i}
+        sample_count = stats.get_flow_count{name=milestone.name, input=(not is_consumption), precision_index=bracket, count=true, sample_index=i}
         count_this_bracket = count_this_bracket + sample_count
         if count_this_bracket + count_before_bracket >= milestone.quantity then
             return i
@@ -225,7 +230,7 @@ local function get_realtime_tick_bounds(lower_bound_ticks_ago, upper_bound_ticks
     return lower_bound_ticks, upper_bound_ticks
 end
 
-local function find_production_tick_bounds(milestone, stats)
+local function find_production_tick_bounds(milestone, stats, is_consumption)
     local precision_bracket = find_precision_bracket(milestone, stats)
     log("bracket to search: " ..precision_bracket)
 
@@ -235,7 +240,7 @@ local function find_production_tick_bounds(milestone, stats)
         -- All we know is it's between tick 0 and 1000 hours ago
         lower_bound_ticks_ago, upper_bound_ticks_ago = game.tick, FLOW_PRECISION_BRACKETS_LENGTHS[defines.flow_precision_index.one_thousand_hours]
     else
-        local sample_index = find_sample_in_precision_bracket(milestone, precision_bracket, stats)
+        local sample_index = find_sample_in_precision_bracket(milestone, precision_bracket, stats, is_consumption)
         if sample_index == 0 then
             return game.tick, game.tick -- Created this exact tick, usually on tick 0 before the start of the game
         end
@@ -251,11 +256,15 @@ function find_completion_tick_bounds(milestone, item_stats, fluid_stats, kill_st
     if milestone.type == "technology" then
         return 0, game.tick -- No way to know past research time
     elseif milestone.type == "item" then
-        return find_production_tick_bounds(milestone, item_stats)
+        return find_production_tick_bounds(milestone, item_stats, false)
     elseif milestone.type == "fluid" then
-        return find_production_tick_bounds(milestone, fluid_stats)
+        return find_production_tick_bounds(milestone, fluid_stats, false)
+    elseif milestone.type == "item_consumption" then
+        return find_production_tick_bounds(milestone, item_stats, true)
+    elseif milestone.type == "fluid_consumption" then
+        return find_production_tick_bounds(milestone, fluid_stats, true)
     elseif milestone.type == "kill" then
-        return find_production_tick_bounds(milestone, kill_stats)
+        return find_production_tick_bounds(milestone, kill_stats, false)
     end
 end
 
@@ -314,9 +323,9 @@ end
 
 function is_production_milestone_reached(milestone, global_force)
     local stats
-    if milestone.type == "item" then
+    if milestone.type == "item" or milestone.type == "item_consumption" then
         stats = global_force.item_stats
-    elseif milestone.type == "fluid" then
+    elseif milestone.type == "fluid" or milestone.type == "fluid_consumption" then
         stats = global_force.fluid_stats
     elseif milestone.type == "kill" then
         stats = global_force.kill_stats
@@ -324,7 +333,12 @@ function is_production_milestone_reached(milestone, global_force)
         error("Invalid milestone type! " .. milestone.type)
     end
 
-    local milestone_count = stats.get_input_count(milestone.name)
+    local milestone_count
+    if milestone.type == "item_consumption" or milestone.type == "fluid_consumption" then
+        milestone_count = stats.get_output_count(milestone.name)
+    else
+        milestone_count = stats.get_input_count(milestone.name)
+    end
 
     -- Aliases
     if global.production_aliases[milestone.name] then
@@ -391,9 +405,9 @@ end
 
 function is_valid_milestone(milestone)
     local prototype
-    if milestone.type == "item" then
+    if milestone.type == "item" or milestone.type == "item_consumption" then
         prototype = game.item_prototypes[milestone.name]
-    elseif milestone.type == "fluid" then
+    elseif milestone.type == "fluid" or milestone.type == "fluid_consumption" then
         prototype = game.fluid_prototypes[milestone.name]
     elseif milestone.type == "technology" then
         prototype = game.technology_prototypes[milestone.name]
@@ -403,4 +417,16 @@ function is_valid_milestone(milestone)
         return false
     end
     return prototype ~= nil
+end
+
+function sprite_prefix(milestone)
+    if milestone.type == "kill" then
+        return "entity"
+    elseif milestone.type == "item" or milestone.type == "item_consumption" then
+        return "item"
+    elseif milestone.type == "fluid" or milestone.type == "fluid_consumption" then
+        return "fluid"
+    else
+        error("Unknown milestone type: " .. milestone.type)
+    end
 end
