@@ -1,7 +1,10 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.22
 Date: ????
-  Changes:
+  Features:
+    - Added new milestone types "item_consumption" and "fluid_consumption", which trigger on consumption rather than production. This has some niche uses for some modpacks.
+      Because of the niche use, these can't be added via the GUI yet. You can add them in presets or with the export feature.
+
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.21
 Date: 2023-12-26
